# illustrator-rs

./: .editorconfig  .gitignore  Cargo.toml
crates/helloworld/: Cargo.toml  Justfile  build.rs
crates/helloworld/src/: lib.rs
crates/iilustrator-sdk/: Cargo.toml
crates/iilustrator-sdk/src/: lib.rs
crates/illustrator-rs/: Cargo.toml  Justfile  README.md  bindings_macos.rs  build.rs  wrapper.hpp
crates/illustrator-rs/src/: ai_plugin.rs  externs.rs  lib.rs  plugin_base.rs
crates/illustrator-sdk/src/: lib.rs
crates/illustrator-sys/: Cargo.toml  Justfile  bindings_macos.rs  build.rs  wrapper.hpp
crates/illustrator-sys/src/: sys.rs
