[package]
name = "illustrator-rs"
version = "0.1.0"
authors = ["Hanakla <hanakla.dev@gmail.com>"]
license = "MIT"
edition = "2021"
# build = "build.rs"

[features]
default = ["builtin_bindings"]
builtin_bindings = ["illustrator-sys/builtin_bindings"]

[build-dependencies]
bindgen = "0.71"
glob = "0.3.2"
illustrator-sys = { path = "../illustrator-sys" }
